syntax = "proto3";

package pb;

import "user-service.proto";

option go_package =  "tenflix/lintang/order-aggregator-service/pb";




message ItemDetails{
  uint64 planId = 1;
  uint64 price = 2;
  string name = 3;
}



message TransactionDetails{
  string order_id =1;
  uint64  gross_amount=2;
  bool  credit_card=3;
  CustomerDetails customerDetails =4;
  ItemDetails itemDetails = 5;
}

message PaymentDetail{
  string id =1;
  string status = 2;
  string grossAmount =3 ;
  string transactionTime= 4;
  string transactionId =5;
  string transactionStatus =6;
  string paymentType = 7;
  string fraudStatus = 8;
  string bank = 9;
  string vaNumber = 10;
  string currency = 11;
  string orderId = 12;
}


message GetRedirectUrl{
  string token =1 ;
  string redirect_url = 2;
}


message PaymentGetRedirectUrlGrpcRequest {
  TransactionDetails transactionDetail = 1;
}

message PaymentGetRedirectUrlGrpcResponse{
  GetRedirectUrl getRedirectUrl=1;
}

message GetPaymentByOrderIdRequest{
  string orderId = 1;
}

message GetPaymentByOrderIdResponse {
  PaymentDetail paymentDetail = 1;
}

service PaymentService{
  rpc getPaymentRedirectUrl(PaymentGetRedirectUrlGrpcRequest) returns (PaymentGetRedirectUrlGrpcResponse);
  rpc getPaymentByOrderId(GetPaymentByOrderIdRequest) returns (GetPaymentByOrderIdResponse);


}

